--- a/app/src/main/res/layout/quest_profile.xml
+++ b/app/src/main/res/layout/quest_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/quest_container">
 
     <android.support.v7.widget.CardView style="@style/cardview">
@@ -11,7 +10,7 @@
             android:id="@+id/front"
             style="@style/root"
             android:background="@drawable/quest_background_sky"
-            android:gravity="center"
+            android:gravity="center|left"
             android:tag="front">
 
             <ImageView
@@ -25,26 +24,30 @@
 
             <include
                 android:id="@+id/contprice"
+                android:visibility="gone"
                 layout="@layout/quest_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true" />
 
+            <!--android:layout_toLeftOf="@id/contprice"-->
             <LinearLayout
                 style="@style/item.linear"
                 android:layout_gravity="center_vertical"
-                android:layout_toLeftOf="@id/contprice"
+                android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/icon"
                 android:layout_weight="0.4">
 
                 <TextView
                     android:id="@+id/title"
+                    android:layout_gravity="center_vertical"
                     style="@style/quest_title"
                     android:text="Заполнить профиль" />
 
                 <TextView
                     android:id="@+id/details"
+                    android:layout_gravity="center_vertical"
                     style="@style/quest_detail"
                     android:text="Заполнить профиль" />
             </LinearLayout>
