--- a/app/src/main/res/layout/quest_favorite_survey.xml
+++ b/app/src/main/res/layout/quest_favorite_survey.xml
@@ -10,15 +10,14 @@
             android:id="@+id/front"
             style="@style/root"
             android:background="@drawable/quest_background_green"
-            android:gravity="left|center"
+            android:gravity="center"
             android:tag="front">
 
-            <!--android:layout_toLeftOf="@+id/rrPrice"-->
             <ImageView
                 android:id="@+id/markerSpecial"
                 style="@style/wrap"
-                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/rrPrice"
                 android:paddingLeft="@dimen/pd_xxsmall"
                 android:paddingRight="@dimen/pd_xxsmall"
                 android:src="@drawable/layble_for_ag_interview"
@@ -26,7 +25,6 @@
 
             <include
                 layout="@layout/quest_price"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
