--- a/app/src/main/res/layout/layout_add_flat.xml
+++ b/app/src/main/res/layout/layout_add_flat.xml
@@ -5,6 +5,8 @@
         android:id="@+id/layout_add_flat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="vertical">
 
         <LinearLayout
