правки экран голосования

--- a/app/src/main/res/layout/fragment_tab_poll.xml
+++ b/app/src/main/res/layout/fragment_tab_poll.xml
@@ -33,6 +33,7 @@
             <LinearLayout
                 android:id="@+id/subscriptionsContainer"
                 style="@style/item.linear"
+                android:visibility="gone"
                 android:layout_below="@android:id/empty">
 
                 <TextView
