--- a/app/src/main/res/layout/fragment_sources_voting.xml
+++ b/app/src/main/res/layout/fragment_sources_voting.xml
@@ -25,6 +25,7 @@
 
             <TextView
                 android:id="@android:id/empty"
+                android:visibility="gone"
                 style="@style/emptylist" />
         </RelativeLayout>
     </RelativeLayout>
