--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,9 +8,9 @@
         android:title="@string/hide_news"
         android:visible="false"
         app:showAsAction="always"/>
-    <item
-        android:id="@+id/action_invite_friends"
-        android:icon="@drawable/mytopic"
-        android:title="@string/action_invite_friends"
-        app:showAsAction="always"/>
+    <!--<item-->
+        <!--android:id="@+id/action_invite_friends"-->
+        <!--android:icon="@drawable/mytopic"-->
+        <!--android:title="@string/action_invite_friends"-->
+        <!--app:showAsAction="always"/>-->
 </menu>
