--- a/app/src/main/res/layout/fragment_poll.xml
+++ b/app/src/main/res/layout/fragment_poll.xml
@@ -19,6 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
+            app:tabGravity="fill"
+            app:tabMaxWidth="0dp"
             app:tabTextColor="@color/gray_lightest"
             app:tabSelectedTextColor="@color/white"
             app:tabIndicatorColor="@color/white"
