--- a/app/src/main/res/layout/fragment_custom_flat.xml
+++ b/app/src/main/res/layout/fragment_custom_flat.xml
@@ -57,7 +57,7 @@
                             style="@style/linear"
                             android:layout_marginBottom="@dimen/pd_xxsmall"
                             android:layout_marginTop="@dimen/pd_xxsmall"
-                            android:visibility="visible">
+                            android:visibility="gone">
 
                             <TextView
                                 android:id="@+id/areaLabel"
