--- a/app/src/main/res/layout/fragment_new_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_new_edit_profile.xml
@@ -199,9 +199,27 @@
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
-                        android:id="@+id/edit_social_binding_card"
+                        android:id="@+id/edit_user_private_property"
                         style="@style/linear"
                         android:layout_below="@+id/edit_user_work_card"
+                        android:layout_marginTop="@dimen/pd_normal">
+
+                        <LinearLayout
+                            style="@style/linear"
+                            android:padding="@dimen/pd_xxsmall">
+
+                            <android.support.v7.widget.AppCompatTextView
+                                android:id="@+id/edit_private_property"
+                                style="@style/edit_profile"
+                                android:hint="Адреса собственности" />
+
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/edit_social_binding_card"
+                        style="@style/linear"
+                        android:layout_below="@+id/edit_user_private_property"
                         android:layout_marginBottom="@dimen/pd_normal"
                         android:layout_marginTop="@dimen/pd_normal">
 
