--- a/app/src/main/res/layout/fragment_new_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_new_edit_profile.xml
@@ -204,7 +204,7 @@
                         android:layout_below="@+id/edit_user_work_card"
                         android:layout_marginTop="@dimen/pd_normal">
 
-                        <LinearLayout
+                        <RelativeLayout
                             style="@style/linear"
                             android:padding="@dimen/pd_xxsmall">
 
@@ -213,7 +213,15 @@
                                 style="@style/edit_profile"
                                 android:hint="Адреса собственности" />
 
-                        </LinearLayout>
+                            <android.support.v7.widget.AppCompatTextView
+                                android:id="@+id/edit_private_property_status"
+                                style="@style/edit_profile"
+                                android:layout_width="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentRight="true"
+                                android:text="указаны"
+                                android:visibility="gone" />
+                        </RelativeLayout>
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
