правки скрола в профиле друга

--- a/app/src/main/res/layout/layout_friend_profile.xml
+++ b/app/src/main/res/layout/layout_friend_profile.xml
@@ -28,6 +28,7 @@
 
                 <RelativeLayout
                     style="@style/root"
+                    android:descendantFocusability="blocksDescendants"
                     android:background="@color/actionbar_background">
 
                     <LinearLayout
