--- a/app/src/main/res/layout/fragment_info_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_info_tab_profile.xml
@@ -23,8 +23,7 @@
         <ProgressBar
             android:id="@+id/progress"
             style="@style/item"
-            android:layout_centerInParent="true"
-            android:visibility="gone" />
+            android:layout_centerInParent="true" />
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
@@ -32,6 +31,7 @@
 
             <android.support.v4.widget.NestedScrollView
                 android:id="@+id/root"
+                android:visibility="gone"
                 style="@style/root"
                 android:fillViewport="true">
 
