--- a/app/src/main/res/layout/fragment_user_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_user_tab_profile.xml
@@ -24,7 +24,7 @@
             android:id="@+id/progress"
             style="@style/item"
             android:layout_centerInParent="true"
-            android:visibility="gone"/>
+            />
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
@@ -33,6 +33,7 @@
 
             <android.support.v4.widget.NestedScrollView
                 android:id="@+id/root"
+                android:visibility="gone"
                 style="@style/root"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
