убрано дергание профиля и добавлена анимация

--- a/app/src/main/res/layout/fragment_new_profile.xml
+++ b/app/src/main/res/layout/fragment_new_profile.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <android.support.design.widget.TabLayout
+            android:visibility="gone"
             android:id="@+id/slidingTabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
