правки анимации профилей

--- a/app/src/main/res/layout/fragment_new_profile.xml
+++ b/app/src/main/res/layout/fragment_new_profile.xml
@@ -11,6 +11,7 @@
 
     <LinearLayout
         style="@style/root"
+        android:id="@+id/root_tab"
         android:fitsSystemWindows="true"
         android:orientation="vertical">
 
