--- a/app/src/main/res/layout/item_sources_voting.xml
+++ b/app/src/main/res/layout/item_sources_voting.xml
@@ -40,7 +40,7 @@
             android:layout_alignParentRight="true"
             android:checked="@{viewModel.isEnable()}"
             android:enabled="@{viewModel.editable}"
-            android:onCheckedChanged="@{(switch, checked) -> viewModel.onCheckedChanged(checked)}"
+            android:onCheckedChanged="@{(switch, checked) -> viewModel.onCheckedChanged(switch,checked)}"
             android:visibility="@{viewModel.editable ? View.VISIBLE : View.GONE}" />
 
     </RelativeLayout>
