--- a/app/src/main/res/layout/fragment_sources_voting.xml
+++ b/app/src/main/res/layout/fragment_sources_voting.xml
@@ -7,7 +7,7 @@
             android:id="@+id/progress"
             style="@style/item"
             android:layout_centerInParent="true"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <RelativeLayout
             android:id="@+id/root"
@@ -19,14 +19,16 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/list"
-                    style="@style/root" />
+                    style="@style/root"/>
 
             </android.support.v4.widget.SwipeRefreshLayout>
 
             <TextView
                 android:id="@android:id/empty"
-                android:visibility="gone"
-                style="@style/emptylist" />
+                style="@style/emptylist"
+                android:visibility="gone"/>
         </RelativeLayout>
+
+        <include layout="@layout/layout_internet_connection_lost"/>
     </RelativeLayout>
 </layout>
